# aries-mediator-service

./: .dockerignore  .env.multi-agent.sample  .env.sample  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.ngrok  Dockerfile.tunnel  MAINTAINERS.md  README.md  deploy  docker-compose-ngrok.yml  docker-compose.dev.yml  docker-compose.multi-agent.yml  docker-compose.multi-demo.yml  docker-compose.nginx.yml  docker-compose.ngrok.yml  docker-compose.standalone.yml  docker-compose.tunnel.yml  docker-compose.yml  logging.ini  manage  ngrok-wait-http.sh  ngrok-wait-ws.sh  ngrok-wait.sh  startup.sh  tunnel-wait.sh
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yaml
acapy/: Dockerfile.acapy  ngrok-wait.sh  requirements-latest.txt  start.sh  wait.sh
acapy/configs/: local.yml  mediator-auto-accept.yml  mediator-with-controller.yml  (+3 more)
afj/: Dockerfile  README.md  gulpfile.js  package.json
caddy/: Caddyfile
configs/: start.yml
load-testing/: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.dev.yml  docker-compose.yml  sample.env
mediator/: Dockerfile
multi-agent-load-test/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.py  db.py  docker-compose.yml  locustfile.py  pyproject.toml
multi-demo-load-test/: .env.sample  README.md  config.py  docker-compose.yml  locustfile.py
nginx/: .dockerignore  app.conf.template
redis-pq-demo/: .env.sample  Dockerfile  Dockerfile.ngrok  README.md  docker-compose.redis.yml  docker-compose.yml  requirements.txt  start.sh
(+63 files in other folders)
